syntax = "proto2";
import "goby/middleware/protobuf/app_config.proto";
import "goby/middleware/protobuf/serial_config.proto";
import "goby/zeromq/protobuf/interprocess_config.proto";

package goby.apps.zeromq.protobuf;

message MAVLinkGatewayConfig
{
    optional goby.middleware.protobuf.AppConfig app = 1;
    optional goby.zeromq.protobuf.InterProcessPortalConfig interprocess = 2;

    required goby.middleware.protobuf.SerialConfig serial = 10;
}
